styles.css
html {
    height: 100%;
    overflow: hidden;

}

body {
    margin: 0;
    padding: 0;
    height: 100%;
      
    background-image: radial-gradient(circle farthest-corner at center, #3C4B57 0%, #1C262B 100%);
      
}

#contentWrapper{
    height:100%;
    width:100%;
}

#content{
  position: absolute;
  left: 50%;
  top: 50%;
  -webkit-transform: translate(-50%, -50%);
  transform: translate(-50%, -50%);
}

input {
  display: block;
  width: 200px;
  padding-top: 10px;
  padding-left:0px;
  border: none;
  border-radius: 0;
  color: #E8C15F;
  background: transparent;
  font-size: 30px;
  transition: .3s ease;
  outline: none;
}

.bar {
  background-color: #E8C15F;
  content: '';
  width: 200px;
  height: 4px;
  position: absolute;
}

.timer {
    text-align:center;
    font-size:30px;
    color:#E8C15F;
}

#questionLabel{
    font-size: 30px;
    font-weight: normal;
    color:#E8C15F;
    text-align: center;
    width:200px;
}

#hintLabel{
    font-size: 12px;
    font-weight: normal;
    color:#E8C15F;
    text-align: center;
    width:200px;
    margin-top: 12px;
}

.divider{
    
}

.loader {
  position: absolute;
  top: calc(50% - 32px);
  left: calc(50% - 32px);
  width: 64px;
  height: 64px;
  border-radius: 50%;
  perspective: 800px;
}

.inner {
  position: absolute;
  box-sizing: border-box;
  width: 100%;
  height: 100%;
  border-radius: 50%;  
}

.inner.one {
  left: 0%;
  top: 0%;
  animation: rotate-one 1s linear infinite;
  border-bottom: 3px solid #EFEFFA;
}

.inner.two {
  right: 0%;
  top: 0%;
  animation: rotate-two 1s linear infinite;
  border-right: 3px solid #EFEFFA;
}

.inner.three {
  right: 0%;
  bottom: 0%;
  animation: rotate-three 1s linear infinite;
  border-top: 3px solid #EFEFFA;
}

@keyframes rotate-one {
  0% {
    transform: rotateX(35deg) rotateY(-45deg) rotateZ(0deg);
  }
  100% {
    transform: rotateX(35deg) rotateY(-45deg) rotateZ(360deg);
  }
}

@keyframes rotate-two {
  0% {
    transform: rotateX(50deg) rotateY(10deg) rotateZ(0deg);
  }
  100% {
    transform: rotateX(50deg) rotateY(10deg) rotateZ(360deg);
  }
}

@keyframes rotate-three {
  0% {
    transform: rotateX(35deg) rotateY(55deg) rotateZ(0deg);
  }
  100% {
    transform: rotateX(35deg) rotateY(55deg) rotateZ(360deg);
  }
}

.timer.lost {
    color:#E8C15F;
    text-shadow:0 0 14px rgba(232,193,95,.85), 0 0 30px rgba(232,193,95,.45);
    transition: text-shadow .2s ease;
}

/* ---------- Flip-klokke -------

